PractExJulio/PlantillaExámen/tests/E_pantalla.p
# E: Borrar pantalla y lugar
borrar_pantalla;
escribir 'limpio';
lugar(10, 5);
escribir 'posicionado';
